// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentedControl Snap render SegmentedControl -- props className 1`] = `
<div
  class="at-segmented-control test"
>
  
  
</div>
`;

exports[`SegmentedControl Snap render SegmentedControl -- props current 1`] = `
<div
  class="at-segmented-control"
>
  
  <div
    class="at-segmented-control__item"
    style="font-size: 20;"
  >
    tab1
  </div>
  <div
    class="at-segmented-control__item"
    style="font-size: 20;"
  >
    tab2
  </div>
  <div
    class="at-segmented-control__item at-segmented-control__item--active"
    style="font-size: 20;"
  >
    tab3
  </div>
  
</div>
`;

exports[`SegmentedControl Snap render SegmentedControl -- props customStyle 1`] = `
<div
  class="at-segmented-control"
  style=""
>
  
  
</div>
`;

exports[`SegmentedControl Snap render SegmentedControl -- props disabled 1`] = `
<div
  class="at-segmented-control at-segmented-control--disabled"
>
  
  <div
    class="at-segmented-control__item at-segmented-control__item--active"
    style="font-size: 20;"
  >
    tab1
  </div>
  <div
    class="at-segmented-control__item"
    style="font-size: 20;"
  >
    tab2
  </div>
  <div
    class="at-segmented-control__item"
    style="font-size: 20;"
  >
    tab3
  </div>
  
</div>
`;

exports[`SegmentedControl Snap render SegmentedControl -- props fontSize 1`] = `
<div
  class="at-segmented-control"
>
  
  <div
    class="at-segmented-control__item at-segmented-control__item--active"
    style="font-size: 30;"
  >
    tab1
  </div>
  <div
    class="at-segmented-control__item"
    style="font-size: 30;"
  >
    tab2
  </div>
  <div
    class="at-segmented-control__item"
    style="font-size: 30;"
  >
    tab3
  </div>
  
</div>
`;

exports[`SegmentedControl Snap render SegmentedControl -- props selectedColor 1`] = `
<div
  class="at-segmented-control"
  style="border-color: #fff;"
>
  
  <div
    class="at-segmented-control__item at-segmented-control__item--active"
    style="font-size: 20; border-color: #fff; background-color: rgb(255, 255, 255);"
  >
    tab1
  </div>
  <div
    class="at-segmented-control__item"
    style="color: rgb(255, 255, 255); font-size: 20; border-color: #fff;"
  >
    tab2
  </div>
  <div
    class="at-segmented-control__item"
    style="color: rgb(255, 255, 255); font-size: 20; border-color: #fff;"
  >
    tab3
  </div>
  
</div>
`;

exports[`SegmentedControl Snap render SegmentedControl -- props values 1`] = `
<div
  class="at-segmented-control"
>
  
  <div
    class="at-segmented-control__item at-segmented-control__item--active"
    style="font-size: 20;"
  >
    tab1
  </div>
  <div
    class="at-segmented-control__item"
    style="font-size: 20;"
  >
    tab2
  </div>
  <div
    class="at-segmented-control__item"
    style="font-size: 20;"
  >
    tab3
  </div>
  
</div>
`;

exports[`SegmentedControl Snap render initial SegmentedControl 1`] = `
<div
  class="at-segmented-control"
>
  
  
</div>
`;
